crates/assay-types/tests/snapshots/schema_snapshots__milestone-schema.snap
---
source: crates/assay-types/tests/schema_snapshots.rs
expression: schema.to_value()
---
{
  "$defs": {
    "ChunkRef": {
      "additionalProperties": false,
      "description": "A reference to a `GatesSpec` chunk within a milestone, identified by slug and ordering.\n\nEach `ChunkRef` corresponds to a directory-based spec (a \"chunk\") that\ncontributes to the parent milestone. The `order` field controls the\ncanonical sequence for display and progress tracking.",
      "properties": {
        "order": {
          "description": "Position of this chunk in the milestone's ordered sequence (0-based or 1-based is caller's choice).",
          "format": "uint32",
          "minimum": 0,
          "type": "integer"
        },
        "slug": {
          "description": "Slug of the referenced `GatesSpec` (matches the spec directory/file name).",
          "type": "string"
        }
      },
      "required": [
        "slug",
        "order"
      ],
      "type": "object"
    },
    "MilestoneStatus": {
      "description": "Lifecycle status of a milestone.\n\nTransitions follow the canonical path:\n`Draft` → `InProgress` → `Verify` → `Complete`",
      "oneOf": [
        {
          "const": "draft",
          "description": "Milestone is being defined but not yet in active development.",
          "type": "string"
        },
        {
          "const": "in_progress",
          "description": "Development is actively in progress.",
          "type": "string"
        },
        {
          "const": "verify",
          "description": "All chunks pass gates; awaiting human or automated verification.",
          "type": "string"
        },
        {
          "const": "complete",
          "description": "Milestone is fully complete and merged.",
          "type": "string"
        }
      ]
    }
  },
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "additionalProperties": false,
  "description": "A milestone, tracking a named feature delivery across one or more gate spec chunks.\n\nPersisted to `.assay/milestones/<slug>.toml`. The `slug` field in the file\nmust match the filename (e.g. `my-feature.toml` → `slug = \"my-feature\"`).",
  "properties": {
    "chunks": {
      "description": "Ordered list of chunk references included in this milestone.",
      "items": {
        "$ref": "#/$defs/ChunkRef"
      },
      "type": "array"
    },
    "created_at": {
      "description": "When this milestone record was first created.",
      "format": "date-time",
      "type": "string"
    },
    "depends_on": {
      "description": "Milestone slugs that must be `Complete` before this one can start.",
      "items": {
        "type": "string"
      },
      "type": "array"
    },
    "description": {
      "description": "Optional longer description of the milestone.",
      "type": [
        "string",
        "null"
      ]
    },
    "name": {
      "description": "Human-readable display name.",
      "type": "string"
    },
    "pr_base": {
      "description": "Target base branch for the pull request (e.g. `\"main\"`).",
      "type": [
        "string",
        "null"
      ]
    },
    "pr_branch": {
      "description": "Feature branch name for this milestone's pull request (e.g. `\"feat/my-feature\"`).",
      "type": [
        "string",
        "null"
      ]
    },
    "slug": {
      "description": "Unique identifier for this milestone; must match the TOML filename without extension.",
      "type": "string"
    },
    "status": {
      "$ref": "#/$defs/MilestoneStatus",
      "default": "draft",
      "description": "Current lifecycle status. Defaults to `Draft`."
    },
    "updated_at": {
      "description": "When this milestone record was last updated.",
      "format": "date-time",
      "type": "string"
    }
  },
  "required": [
    "slug",
    "name",
    "created_at",
    "updated_at"
  ],
  "title": "Milestone",
  "type": "object"
}
