crates/assay-types/tests/snapshots/schema_snapshots__milestone-status-schema.snap
---
source: crates/assay-types/tests/schema_snapshots.rs
expression: schema.to_value()
---
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "description": "Lifecycle status of a milestone.\n\nTransitions follow the canonical path:\n`Draft` → `InProgress` → `Verify` → `Complete`",
  "oneOf": [
    {
      "const": "draft",
      "description": "Milestone is being defined but not yet in active development.",
      "type": "string"
    },
    {
      "const": "in_progress",
      "description": "Development is actively in progress.",
      "type": "string"
    },
    {
      "const": "verify",
      "description": "All chunks pass gates; awaiting human or automated verification.",
      "type": "string"
    },
    {
      "const": "complete",
      "description": "Milestone is fully complete and merged.",
      "type": "string"
    }
  ],
  "title": "MilestoneStatus"
}
