crates/assay-types/tests/snapshots/schema_snapshots__orchestrator-mode-schema.snap
---
source: crates/assay-types/tests/schema_snapshots.rs
expression: schema.to_value()
---
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "description": "Coordination mode for multi-session orchestrated runs.\n\nSelects the execution topology: the default DAG mode uses explicit\n`depends_on` edges; Mesh uses heartbeat-based peer coordination;\nGossip uses periodic coordinator broadcast.",
  "oneOf": [
    {
      "const": "dag",
      "description": "Directed-acyclic-graph execution using explicit `depends_on` edges.\nThis is the default coordination mode.",
      "type": "string"
    },
    {
      "const": "mesh",
      "description": "Heartbeat-based peer mesh coordination.",
      "type": "string"
    },
    {
      "const": "gossip",
      "description": "Periodic gossip-based coordinator broadcast.",
      "type": "string"
    }
  ],
  "title": "OrchestratorMode"
}
