crates/assay-types/tests/snapshots/schema_snapshots__orchestrator-status-schema.snap
---
source: crates/assay-types/tests/schema_snapshots.rs
expression: schema.to_value()
---
{
  "$defs": {
    "FailurePolicy": {
      "description": "Failure policy for orchestrated runs.\n\nDefaults to [`FailurePolicy::SkipDependents`], which allows independent\nsessions to continue while skipping only those that depend on the failed session.",
      "oneOf": [
        {
          "const": "skip_dependents",
          "description": "Skip dependents of failed sessions, continue independent sessions.",
          "type": "string"
        },
        {
          "const": "abort",
          "description": "Abort the entire run on first failure — no new sessions are dispatched.",
          "type": "string"
        }
      ]
    },
    "GossipStatus": {
      "additionalProperties": false,
      "description": "Aggregate gossip coordination status snapshot.\n\nWritten into [`OrchestratorStatus::gossip_status`] on each coordinator\ncycle and on run completion. Readable via\n`cat .assay/orchestrator/<run_id>/state.json | jq .gossip_status`.",
      "properties": {
        "coordinator_rounds": {
          "description": "Number of coordinator synthesis rounds completed.",
          "format": "uint32",
          "minimum": 0,
          "type": "integer"
        },
        "knowledge_manifest_path": {
          "description": "Absolute path to `knowledge.json` on disk.",
          "type": "string"
        },
        "sessions_synthesized": {
          "description": "Number of sessions whose results have been synthesized into the\nknowledge manifest so far.",
          "format": "uint32",
          "minimum": 0,
          "type": "integer"
        }
      },
      "required": [
        "sessions_synthesized",
        "knowledge_manifest_path",
        "coordinator_rounds"
      ],
      "type": "object"
    },
    "MeshMemberState": {
      "description": "SWIM-inspired membership state for a single peer in Mesh mode.\n\nTransitions: `Alive` → `Suspect` (heartbeat missed) → `Dead` (timeout exceeded).\n`Completed` distinguishes a normal graceful exit from a crash (`Dead`).",
      "oneOf": [
        {
          "const": "alive",
          "description": "Peer is actively sending heartbeats.",
          "type": "string"
        },
        {
          "const": "suspect",
          "description": "Heartbeat missed; peer may be slow or partitioned.",
          "type": "string"
        },
        {
          "const": "dead",
          "description": "Heartbeat timed out; peer is presumed crashed.",
          "type": "string"
        },
        {
          "const": "completed",
          "description": "Peer exited normally (sent a completed sentinel).",
          "type": "string"
        }
      ]
    },
    "MeshMemberStatus": {
      "additionalProperties": false,
      "description": "Per-member status snapshot for Mesh mode membership tracking.\n\nPersisted as part of [`MeshStatus`] inside [`OrchestratorStatus`].",
      "properties": {
        "last_heartbeat_at": {
          "description": "Timestamp of the most recent heartbeat received from this peer.",
          "format": "date-time",
          "type": [
            "string",
            "null"
          ]
        },
        "name": {
          "description": "Session name of this peer.",
          "type": "string"
        },
        "state": {
          "$ref": "#/$defs/MeshMemberState",
          "description": "Current SWIM-inspired membership state."
        }
      },
      "required": [
        "name",
        "state"
      ],
      "type": "object"
    },
    "MeshStatus": {
      "additionalProperties": false,
      "description": "Aggregate mesh coordination status snapshot.\n\nWritten into [`OrchestratorStatus::mesh_status`] on each routing tick\nand on session state transitions. Readable via\n`cat .assay/orchestrator/<run_id>/state.json | jq .mesh_status`.",
      "properties": {
        "members": {
          "description": "Per-member membership snapshots.",
          "items": {
            "$ref": "#/$defs/MeshMemberStatus"
          },
          "type": "array"
        },
        "messages_routed": {
          "description": "Total count of messages routed between session inboxes and outboxes.",
          "format": "uint64",
          "minimum": 0,
          "type": "integer"
        }
      },
      "required": [
        "members",
        "messages_routed"
      ],
      "type": "object"
    },
    "OrchestratorPhase": {
      "description": "High-level phase of an orchestrated run.",
      "oneOf": [
        {
          "const": "running",
          "description": "Sessions are still being dispatched/executed.",
          "type": "string"
        },
        {
          "const": "completed",
          "description": "All sessions completed successfully.",
          "type": "string"
        },
        {
          "const": "partial_failure",
          "description": "At least one session failed; others may have completed or been skipped.",
          "type": "string"
        },
        {
          "const": "aborted",
          "description": "Run was aborted (due to [`FailurePolicy::Abort`] or external signal).",
          "type": "string"
        }
      ]
    },
    "SessionRunState": {
      "description": "Run state of a single session in the orchestrator.",
      "oneOf": [
        {
          "const": "pending",
          "description": "Session is queued and waiting for dependencies/concurrency slot.",
          "type": "string"
        },
        {
          "const": "running",
          "description": "Session is currently executing.",
          "type": "string"
        },
        {
          "const": "completed",
          "description": "Session completed successfully.",
          "type": "string"
        },
        {
          "const": "failed",
          "description": "Session failed during execution.",
          "type": "string"
        },
        {
          "const": "skipped",
          "description": "Session was skipped (e.g., upstream dependency failed).",
          "type": "string"
        }
      ]
    },
    "SessionStatus": {
      "additionalProperties": false,
      "description": "Per-session status snapshot for observability.\n\nPersisted as part of [`OrchestratorStatus`] in\n`.assay/orchestrator/<run_id>/state.json` and readable by the\n`orchestrate_status` MCP tool.",
      "properties": {
        "completed_at": {
          "description": "When the session finished (None if still pending/running).",
          "format": "date-time",
          "type": [
            "string",
            "null"
          ]
        },
        "duration_secs": {
          "description": "Wall-clock duration in seconds (None if not yet completed).",
          "format": "double",
          "type": [
            "number",
            "null"
          ]
        },
        "error": {
          "description": "Error message if the session failed.",
          "type": [
            "string",
            "null"
          ]
        },
        "name": {
          "description": "Effective session name (from manifest or spec name fallback).",
          "type": "string"
        },
        "skip_reason": {
          "description": "Reason the session was skipped (e.g., \"upstream 'auth' failed\").",
          "type": [
            "string",
            "null"
          ]
        },
        "spec": {
          "description": "Spec path or name this session evaluates.",
          "type": "string"
        },
        "started_at": {
          "description": "When the session started executing (None if still pending/skipped).",
          "format": "date-time",
          "type": [
            "string",
            "null"
          ]
        },
        "state": {
          "$ref": "#/$defs/SessionRunState",
          "description": "Current run state."
        }
      },
      "required": [
        "name",
        "spec",
        "state"
      ],
      "type": "object"
    }
  },
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "additionalProperties": false,
  "description": "Orchestrator-level status snapshot, persisted for status queries.\n\nWritten to `.assay/orchestrator/<run_id>/state.json` after each session\ncompletion. Designed to be read by the `orchestrate_status` MCP tool\nand CLI status commands.",
  "properties": {
    "completed_at": {
      "description": "When the run completed (None if still running).",
      "format": "date-time",
      "type": [
        "string",
        "null"
      ]
    },
    "failure_policy": {
      "$ref": "#/$defs/FailurePolicy",
      "description": "Failure policy in effect for this run."
    },
    "gossip_status": {
      "anyOf": [
        {
          "$ref": "#/$defs/GossipStatus"
        },
        {
          "type": "null"
        }
      ],
      "description": "Gossip coordination status (present only when `mode = \"gossip\"`)."
    },
    "mesh_status": {
      "anyOf": [
        {
          "$ref": "#/$defs/MeshStatus"
        },
        {
          "type": "null"
        }
      ],
      "description": "Mesh coordination status (present only when `mode = \"mesh\"`)."
    },
    "phase": {
      "$ref": "#/$defs/OrchestratorPhase",
      "description": "Current phase of the run."
    },
    "run_id": {
      "description": "Unique identifier for this orchestrated run.",
      "type": "string"
    },
    "sessions": {
      "description": "Per-session status snapshots.",
      "items": {
        "$ref": "#/$defs/SessionStatus"
      },
      "type": "array"
    },
    "started_at": {
      "description": "When the orchestrated run started.",
      "format": "date-time",
      "type": "string"
    }
  },
  "required": [
    "run_id",
    "phase",
    "failure_policy",
    "sessions",
    "started_at"
  ],
  "title": "OrchestratorStatus",
  "type": "object"
}
