crates/assay-types/tests/snapshots/schema_snapshots__poll-signals-result-schema.snap
---
source: crates/assay-types/tests/schema_snapshots.rs
expression: schema.to_value()
---
{
  "$defs": {
    "GateSummary": {
      "additionalProperties": false,
      "description": "Lightweight gate pass/fail/skip counts included in a [`PeerUpdate`].\n\nThis is a signal-specific summary — not the same as the full gate types\nin [`crate::gate_run`].",
      "properties": {
        "failed": {
          "description": "Number of gate criteria that failed.",
          "format": "uint32",
          "minimum": 0,
          "type": "integer"
        },
        "passed": {
          "description": "Number of gate criteria that passed.",
          "format": "uint32",
          "minimum": 0,
          "type": "integer"
        },
        "skipped": {
          "description": "Number of gate criteria that were skipped.",
          "format": "uint32",
          "minimum": 0,
          "type": "integer"
        }
      },
      "required": [
        "passed",
        "failed",
        "skipped"
      ],
      "type": "object"
    },
    "PeerUpdate": {
      "additionalProperties": false,
      "description": "A cross-job status update sent from one Smelt job to another via the\nAssay signal endpoint.\n\nSmelt's `notify` section triggers a POST of this payload to\n`POST /api/v1/signal` when a source session completes.",
      "properties": {
        "branch": {
          "description": "Git branch the source session worked on.",
          "type": "string"
        },
        "changed_files": {
          "description": "Files changed by the source session (relative paths).",
          "items": {
            "type": "string"
          },
          "type": "array"
        },
        "gate_summary": {
          "$ref": "#/$defs/GateSummary",
          "description": "Lightweight gate result summary from the source session."
        },
        "source_job": {
          "description": "Smelt job identifier of the sending job.",
          "type": "string"
        },
        "source_session": {
          "description": "Session name within the source job that produced this update.",
          "type": "string"
        }
      },
      "required": [
        "source_job",
        "source_session",
        "changed_files",
        "gate_summary",
        "branch"
      ],
      "type": "object"
    }
  },
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "additionalProperties": false,
  "description": "Result type for the `poll_signals` MCP tool.\n\nWraps a vector of [`PeerUpdate`] messages read from a session's inbox.",
  "properties": {
    "signals": {
      "description": "Signals consumed from the session inbox (exactly-once delivery).",
      "items": {
        "$ref": "#/$defs/PeerUpdate"
      },
      "type": "array"
    }
  },
  "required": [
    "signals"
  ],
  "title": "PollSignalsResult",
  "type": "object"
}
