crates/assay-types/tests/snapshots/schema_snapshots__precondition-status-schema.snap
---
source: crates/assay-types/tests/schema_snapshots.rs
expression: schema.to_value()
---
{
  "$defs": {
    "CommandStatus": {
      "description": "Status of a single shell command listed in [`SpecPreconditions::commands`].",
      "properties": {
        "command": {
          "description": "The shell command that was executed.",
          "type": "string"
        },
        "output": {
          "description": "Captured stdout/stderr output. Omitted from serialized output when absent.",
          "type": [
            "string",
            "null"
          ]
        },
        "passed": {
          "description": "Whether the command exited with code 0.",
          "type": "boolean"
        }
      },
      "required": [
        "command",
        "passed"
      ],
      "type": "object"
    },
    "RequireStatus": {
      "description": "Status of a single spec slug listed in [`SpecPreconditions::requires`].",
      "properties": {
        "passed": {
          "description": "Whether the last recorded run for this slug passed.",
          "type": "boolean"
        },
        "spec_slug": {
          "description": "The gate spec slug that was checked.",
          "type": "string"
        }
      },
      "required": [
        "spec_slug",
        "passed"
      ],
      "type": "object"
    }
  },
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "description": "Runtime result of evaluating all preconditions for a gate spec.\n\nProduced by the gate runner after checking all [`SpecPreconditions`].",
  "properties": {
    "commands": {
      "description": "Status of each `commands` entry.",
      "items": {
        "$ref": "#/$defs/CommandStatus"
      },
      "type": "array"
    },
    "requires": {
      "description": "Status of each `requires` entry.",
      "items": {
        "$ref": "#/$defs/RequireStatus"
      },
      "type": "array"
    }
  },
  "required": [
    "requires",
    "commands"
  ],
  "title": "PreconditionStatus",
  "type": "object"
}
