crates/assay-types/tests/snapshots/schema_snapshots__prompt-layer-kind-schema.snap
---
source: crates/assay-types/tests/schema_snapshots.rs
expression: schema.to_value()
---
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "description": "Category of a prompt layer, determining its priority tier in assembly.\n\nVariants are ordered from highest built-in priority to custom:\n- `System`: foundational agent instructions\n- `Project`: project-level context and conventions\n- `Spec`: spec-specific acceptance criteria and constraints\n- `Custom`: user-defined layers injected at arbitrary priority",
  "oneOf": [
    {
      "const": "system",
      "description": "Foundational agent instructions (highest built-in priority).",
      "type": "string"
    },
    {
      "const": "project",
      "description": "Project-level context and conventions.",
      "type": "string"
    },
    {
      "const": "spec",
      "description": "Spec-specific acceptance criteria and constraints.",
      "type": "string"
    },
    {
      "const": "custom",
      "description": "User-defined layer injected at arbitrary priority.",
      "type": "string"
    }
  ],
  "title": "PromptLayerKind"
}
