crates/assay-types/tests/snapshots/schema_snapshots__prompt-layer-schema.snap
---
source: crates/assay-types/tests/schema_snapshots.rs
expression: schema.to_value()
---
{
  "$defs": {
    "PromptLayerKind": {
      "description": "Category of a prompt layer, determining its priority tier in assembly.\n\nVariants are ordered from highest built-in priority to custom:\n- `System`: foundational agent instructions\n- `Project`: project-level context and conventions\n- `Spec`: spec-specific acceptance criteria and constraints\n- `Custom`: user-defined layers injected at arbitrary priority",
      "oneOf": [
        {
          "const": "system",
          "description": "Foundational agent instructions (highest built-in priority).",
          "type": "string"
        },
        {
          "const": "project",
          "description": "Project-level context and conventions.",
          "type": "string"
        },
        {
          "const": "spec",
          "description": "Spec-specific acceptance criteria and constraints.",
          "type": "string"
        },
        {
          "const": "custom",
          "description": "User-defined layer injected at arbitrary priority.",
          "type": "string"
        }
      ]
    }
  },
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "additionalProperties": false,
  "description": "A single prompt layer contributing to the assembled agent prompt.\n\nPrompt layers are assembled in priority order (lowest `priority` value first)\nto build the final system prompt for an agent session.",
  "properties": {
    "content": {
      "description": "The prompt text content.",
      "type": "string"
    },
    "kind": {
      "$ref": "#/$defs/PromptLayerKind",
      "description": "Category of this prompt layer."
    },
    "name": {
      "description": "Human-readable name for identification and debugging.",
      "type": "string"
    },
    "priority": {
      "description": "Ordering hint for assembly (lower values assemble first).",
      "format": "int32",
      "type": "integer"
    }
  },
  "required": [
    "kind",
    "name",
    "content",
    "priority"
  ],
  "title": "PromptLayer",
  "type": "object"
}
